--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,13 +1,9 @@
 <div class="middle-container">
   <div>
-    <h1>New pin</h1>
+    <h1>Your new pin</h1>
   
     <%= render "form", pin: @pin %>
   
     <br>
-  
-    <div>
-      <%= link_to "Back to pins", pins_path %>
-    </div>
   </div>
 </div>
