--- a/app/views/shared/_unsave_layout.html.erb
+++ b/app/views/shared/_unsave_layout.html.erb
@@ -1,6 +1,6 @@
 <% destination = board_id.nil? ? user__saved_index_path(current_user) : user_board_path(current_user, Board.find(board_id)) %>
-<% name = board_id.nil? ? "Profile" : Board.find(board_id).name %>
-<% name_prettier = "#{name.truncate(15)}" %>
+<% name = board_id.nil? ? "Unorganized Ideas" : Board.find(board_id).name %>
+<% name_prettier = "#{name.truncate(19)}" %>
 <div class="top-left bold">
   <%= link_to destination, class: "white", data: {turbo_frame: "_top"} do %>
     <span><%= name_prettier %></span> 
