--- a/app/views/likes/_like_count.html.erb
+++ b/app/views/likes/_like_count.html.erb
@@ -1,3 +1,1 @@
-<span>
-  <%= likes_count(likeable) if likes_count(likeable).positive? %>
-</span>
+<%= content_tag(:span, likes_count(likeable)) if likes_count(likeable).positive? %>
