--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,10 +1,9 @@
 <div class="middle-container">
   <div>
     <h1>Editing pin</h1>
-    <% if @cancel_form %>
-      <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] %>
-    <% else %>
-      <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
+
+    <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
+      <% unless @cancel_form %>
         <% if @in_frame_mode %>
           <div class="modal" data-controller="close-form" data-close-form-target="container" >
             <div class="modal-content">
@@ -15,10 +14,9 @@
           <%= render partial: "pins/edit_form", locals: {pin: @pin, in_frame_mode: @in_frame_mode} %>
         <% end %>
       <% end %>
-    <% end %>
-  
-    <br>
-  
+    <% end %>  
+
+    <br>  
     <div>
       <%= link_to "Show this pin", @pin %> |
       <%= link_to "Back to pins", pins_path %>
