--- a/app/views/saved_pins/update.turbo_stream.erb
+++ b/app/views/saved_pins/update.turbo_stream.erb
@@ -1,5 +1,11 @@
+<%= turbo_stream.update "edit#{dom_id(@saved_pin)}", "" %>
+
 <%= turbo_stream.remove "box_#{dom_id(@pin)}" %>
 
-<%= turbo_stream.replace "#{ dom_id(@saved_pin.board) }" do %>
-  <%= render partial: "saved/board_thumbnail", locals: {board: @saved_pin.board, user: @saved_pin.user} %>
+<%# reload the board thumbnail %>
+<% if @saved_pin.board != nil %>
+  <%= turbo_stream.replace "#{ dom_id(@saved_pin.board) }" do %>
+    <%= render partial: "saved/board_thumbnail", locals: {board: @saved_pin.board, user: @saved_pin.user} %>
+  <% end %>
 <% end %>
+
