--- a/app/views/shared/_comment_short.html.erb
+++ b/app/views/shared/_comment_short.html.erb
@@ -1,37 +1,19 @@
 <%= turbo_frame_tag(dom_id(comment)) do %>
-  <div class="left-padding-1rem">
-    <%= render partial: "comments/comment_body", locals: { comment: comment } %>
+  <div class="flex gap-2">
+    <%= render partial: "shared/visit_user_via_avatar", locals: {user: comment.user, size: 32} %>
+    <div class="min-w-0">
+      <%= render partial: "comments/comment_body", locals: { comment: comment } %>
 
-    <%# Like a comment %>
-    <div class="one-line-container left-padding-1rem">
-      <div>
-        <%= turbo_frame_tag("like_frame_#{dom_id(comment)}") do %>
-          <div class="one-line-container">
-            <%= render partial: 'likes/like_icon', locals: {likeable: comment} %>
-            <%= render partial: 'likes/like_count', locals: {likeable: comment} %>
-          </div>
-        <% end %>
+      <div class="flex gap-2 items-center px-2 pb-2">
+        <%= render partial: "shared/like", locals: {likeable: comment} %>
+        <%= link_to "Reply", new_pin_comment_path(pin, parent_id: comment.id), data: {turbo_frame: "#{dom_id(comment)}_new_reply"}, class: "bold blur" %>
+        <%= render partial: "comments/edit_comment_frame", locals: {comment: comment, pin: pin} %>
       </div>
-      <%= link_to "Reply", new_pin_comment_path(pin, parent_id: comment.id), data: {turbo_frame: "#{dom_id(comment)}_new_reply"}, class: "bold blur" %>
-      <% if comment.user == current_user %>
-        <%= link_to "Edit", edit_pin_comment_path(pin, comment), data: {turbo_frame: "#{dom_id(comment)}_body_content"}, class: "bold blur" %>
-        <%= link_to "Delete", pin_comment_path(pin, comment), data: {turbo_method: :delete, turbo_comfirm: "Are you sure?"}, class: "bold blur" %>
-      <% end %>
+
+      <%= turbo_frame_tag("#{dom_id(comment)}_new_reply") %>
+
+      <%# initially show only the newest reply if has a lots of replies %>
+      <%= render partial: "comments/replies", locals: {comment: comment, pin: pin} %>
     </div>
-
-
-    <%= turbo_frame_tag("#{dom_id(comment)}_new_reply") %>
-
-    <%= turbo_frame_tag("#{dom_id(comment)}_show_replies") do %>
-      <% count = comment.replies.count%>
-      <% if count > 0 %>
-        <%# this only show the newest reply, click link below to view all replies %>
-        <% if count > 1 %>
-          <div class="left-padding-1rem"><%= link_to "__ View full #{pluralize(count, "reply")}", pin_comment_path(pin, comment) %></div>
-        <% end %>
-        <%# show the newsest reply %>
-        <%= render partial: "shared/comment_short", locals: {pin: pin, comment: comment.replies.newest_reply} %>
-      <% end %>
-    <% end %>
   </div>
 <% end %>
