--- a/app/views/shared/_edit_pin_layout.html.erb
+++ b/app/views/shared/_edit_pin_layout.html.erb
@@ -1,7 +1,7 @@
+<% return unless current_user_is_owner_of?(pin) %>
+
 <div class="bottom-right">
-  <%= link_to edit_pin_path(pin, in_frame_mode: true), class: "white bold", data: {turbo_frame: "#{dom_id(pin)}_edit_layout"} do %>
-    <span>Edit</span>
-    <i class="fa-solid fa-pen"></i>
-  <% end %>
-  <%= turbo_frame_tag [dom_id(pin), "edit_layout"] %>
+    <%# edit_pin_button is in application helper %>
+    <%= edit_pin_button(pin) %>
 </div>
+<%= turbo_frame_tag [dom_id(pin), "edit_layout"] %>
