--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -4,26 +4,10 @@
       <%= link_to user_profile_path(user, user.profile) do %>
         <%= render partial: "shared/user_avatar", locals: {user: user, size: 128} %>
       <% end %>
-
       <%= render partial: "users/creator_info", locals: {user: user} %>
-      <div class="follow-button">
-        <% if current_user != user %>
-          <% followed = current_user.followings.find_by(id: user.id) %>
-          <% if followed %>
-            <%= render partial: "follows/follow", locals: {user: user} %>
-          <% end %>
-          <% if not followed %>
-            <%= render partial: "follows/following", locals: {user: user} %>
-          <% end %>
-        <% end %>
-      </div>
+      <%= render partial: "shared/follow_user", locals: {user: user} %>
     </div>
     
-    <div class="middle-nav">
-      <div class="middle-one-line-container">
-        <div class="m1 big border-bottom"><%= link_to "Created", user__created_index_path(@user), "data-navigate-target": "navButton"  %></div>
-        <div class="m1 big border-bottom"><%= link_to "Saved", user__saved_index_path(@user), "data-navigate-target": "navButton"  %></div>
-      </div>
-    </div>
+    <%= render partial: "shared/created_saved_navigation", locals: { user: user } %>    
   </div>
 </div>
