--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,5 +1,5 @@
 <div class="middle-container">
-  <div id="<%= dom_id pin %>" class= "pin_display">
+  <div id="<%= dom_id pin %>" class= "pin_display relative">
     <%= render partial: "pins/pin_image", locals: { pin: pin } %>
     
     <div class = "pin_content pr-2">
