--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,19 +2,21 @@
 <%= turbo_frame_tag("#{dom_id(@comment)}_body_content") do %>
   <% if @cancel_form %>
     <%# render the original comment body %>
-    <%= @comment.body.strip %>
+    <div class="break-words text-wrap max-w-full">
+      <%= @comment.body.strip %>
+    </div>
   <% else %>
-    <%= form_with(model: [@pin, @comment]) do |form| %>
-      <%= render partial: "shared/errors_notification", locals: { resource: @comment } %>
-
-      <div>
-        <%= form.text_area :body %>
-      </div>
-
-      <div>
-        <%= form.submit "Save" %>
-        <%= link_to 'Cancel', edit_pin_comment_path(@pin, @comment, cancel_form: true) %>
-      </div>
-    <% end %>
+    <div>
+      <%= form_with(model: [@pin, @comment]) do |form| %>
+        <%= render partial: "shared/errors_notification", locals: { resource: @comment } %>
+        <div class="relative">
+          <%= form.text_area :body, class: "in-comments-section" %>
+          <button class="send-button">
+            <i class="fa-brands fa-telegram fa-2xl"></i>
+          </button>
+        </div>
+        <%= link_to 'Cancel', edit_pin_comment_path(@pin, @comment, cancel_form: true), class: "button" %>
+      <% end %>
+    </div>
   <% end %>
 <% end %>
